<resources>
    <string name="app_name">MrGroupOlx</string>

    <string name="title_msg">Welcome to the world of buying and selling</string>
    <string name="skip">Skip >>></string>
    <string name="proceeding">By proceeding you agree to the Terms of Use of XYZABC</string>

    <string name="browse_categories">Browse categories</string>
    <string name="fresh_recommendations">Fresh recommendations</string>
    <string name="price_not_mentioned">Price not mentioned</string>
    <string name="Navigation_title">Where do you want to buy/sell products?</string>
    <string name="navigation_body">To enjoy all that OLX has to offer for you, we need to know where to look for them.</string>
    <string name="btn_text">Around me</string>
    <string name="phone_message">We sent a 4-digit code to</string>


    <string name="hello">Hello</string>
    <string name="near_by">Nearby Product Recommendation</string>
    <string name="showing_results_for">Showing results for :</string>
    <string name="change_location">Change</string>
    <string name="current_location">Current Location</string>
    <string name="looking_edt">What are you looking for ?</string>
    <string name="search_location">Search for Location</string>
    <string name="Chat">Chat</string>

    <string name="album_name_all">All Media</string>

    <string name="button_preview">Preview</string>
    <string name="button_apply_default">Apply</string>
    <string name="button_apply">Apply(%1$d)</string>
    <string name="button_back">Back</string>
    <string name="photo_grid_capture">Camera</string>
    <string name="empty_text">No media yet</string>
    <string name="button_ok">OK</string>

    <string name="error_over_count">You can only select up to %1$d media files</string>
    <string name="error_file_type">Unsupported file type</string>
    <string name="error_type_conflict">Can\'t select images and videos at the same time</string>
    <string name="error_no_video_activity">No App found supporting video preview</string>
    <string name="error_over_original_size">Can\'t select the images larger than %1$d MB</string>
    <string name="error_over_original_count">%1$d images over %2$d MB. Original will be unchecked</string>
    <string name="button_original">Original</string>

    <string name="error_gif">x or y bound size should be at least %1$dpx and file size should be no more than %2$sM</string>

    <plurals name="error_over_count">
        <item quantity="one">Можно выбрать не более %1$d файла</item>
        <item quantity="few">Можно выбрать не более %1$d файлов</item>
        <item quantity="many">Можно выбрать не более %1$d файлов</item>
        <item quantity="other">Можно выбрать не более %1$d файлов</item>
    </plurals>



    <string name="button_allow">Allow</string>
    <string name="button_deny">Deny</string>

    <string name="permission_pick_rationale">READ_EXTERNAL_STORAGE permission is needed to pick image.</string>
    <string name="permission_crop_rationale">WRITE_EXTERNAL_STORAGE permission is needed to save cropped image.</string>
    <string name="permission_denied">Permission was denied. Please consider granting it in order to use all features.</string>
    <string name="permission_denied_never_ask_again">Permission was denied with never ask again.</string>

</resources>