<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/og_clr">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:contentInsetStartWithNavigation="0dp"
                app:layout_scrollFlags="scroll|enterAlways"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/iv_profile"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:padding="@dimen/_3sdp"
                        android:src="@drawable/ic_profile_icon_new"
                        android:tint="@color/white" />

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_weight="7"
                        android:padding="@dimen/_10sdp"
                        android:src="@drawable/ic_title_icon" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="@dimen/_5sdp"
                            android:src="@drawable/ic_notification_top"
                            android:tint="@color/white" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/iv_msg"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="@dimen/_5sdp"
                            android:src="@drawable/ic_msg_option_top"
                            android:tint="@color/white" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.appcompat.widget.Toolbar>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8sdp"
                android:background="@drawable/edittext_shadow"
                android:drawableStart="@drawable/ic_search_with_line"
                android:drawableEnd="@drawable/ic_mic"
                android:drawablePadding="@dimen/_10sdp"
                android:drawableTint="@color/black"
                android:fontFamily="@font/helvetica"
                android:hint="@string/looking_edt"
                android:inputType="textPersonName"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_5sdp"
                android:textSize="@dimen/_12sdp" />

        </com.google.android.material.appbar.AppBarLayout>


        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:clipToPadding="false"
            android:scrollbars="none"
            android:scrollingCache="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_gravity="center"
                    android:background="@color/location_bar"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:weightSum="10">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:adjustViewBounds="true"
                        android:padding="@dimen/_2sdp"
                        android:scaleType="fitXY"
                        android:src="@drawable/ic_location_on"
                        android:tint="@color/toogle_ac" />

                    <TextView
                        android:id="@+id/txt_current_location"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_10sdp"
                        android:layout_weight="10"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/current_location"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_10sdp" />

                    <ImageView
                        android:id="@+id/iv_edt_location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_5sdp"
                        android:adjustViewBounds="true"
                        android:padding="@dimen/_3sdp"
                        android:scaleType="fitXY"
                        android:src="@drawable/ic_edit_location"
                        android:tint="@color/toogle_ac" />

                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_header_cat"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_63sdp"
                    android:scrollbars="none"
                    tools:listitem="@layout/row_header_categories" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_slider_mainActivity"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_150sdp"
                    android:layout_marginHorizontal="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:visibility="visible"
                    app:cardCornerRadius="@dimen/_10sdp">

                    <com.smarteist.autoimageslider.SliderView
                        android:id="@+id/imageSlider"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:sliderAnimationDuration="300"
                        app:sliderAutoCycleDirection="back_and_forth"
                        app:sliderIndicatorAnimationDuration="300"
                        app:sliderIndicatorEnabled="true"
                        app:sliderIndicatorGravity="center_horizontal|bottom"
                        app:sliderIndicatorMargin="@dimen/_10sdp"
                        app:sliderIndicatorOrientation="horizontal"
                        app:sliderIndicatorSelectedColor="#4E4E4E"
                        app:sliderIndicatorUnselectedColor="#CDCDCD"
                        app:sliderScrollTimeInSec="1" />

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/tvTrending"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/_2sdp"
                    android:fontFamily="@font/helvetica"
                    android:gravity="center"
                    android:text="@string/near_by"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_near_by_products"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:listitem="@layout/row_all_in_one" />

                <ProgressBar
                    android:id="@+id/ProgressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:visibility="visible" />
            </LinearLayout>

        </androidx.core.widget.NestedScrollView>


    </LinearLayout>

</FrameLayout>
